--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 Лекции/.ipynb_checkpoints/
+
+Практические занятия/Занятие 3/.ipynb_checkpoints/
+
+Практические занятия/Занятие 4/.ipynb_checkpoints/
