--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 Практические занятия/Занятие 3/.ipynb_checkpoints/
 
 Практические занятия/Занятие 4/.ipynb_checkpoints/
+
+Практические занятия/Занятие 5/.ipynb_checkpoints/
+
+Практические занятия/Занятие 5/src/.ipynb_checkpoints/
+
+Практические занятия/Занятие 5/src/data_generator.ipynb
