--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 Практические занятия/Занятие 5/src/.ipynb_checkpoints/
 
 Практические занятия/Занятие 5/src/data_generator.ipynb
+
+Практические занятия/Занятие 6/Дополнительные материалы/.ipynb_checkpoints/
+
+Практические занятия/Занятие 6/.ipynb_checkpoints/
