--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 Практические занятия/Занятие 6/Дополнительные материалы/.ipynb_checkpoints/
 
 Практические занятия/Занятие 6/.ipynb_checkpoints/
+
+Практические занятия/Занятие 7/.ipynb_checkpoints/
+
+*.bak
